# lume_py

./: .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt
examples/: job.ipynb  pipeline.ipynb  result.ipynb  workshop.ipynb
examples/data/: target.json  workshop_target.json
lume_py/: __init__.py
lume_py.git/: config  packed-refs
lume_py.git/objects/pack/: pack-43c007c0bc3f3738eec059f2be33d83c724bad1e.idx  pack-43c007c0bc3f3738eec059f2be33d83c724bad1e.rev
lume_py/endpoints/: __init__.py  config.py  excel.py  jobs.py  mappers.py  pdf.py  pipeline.py  results.py  target.py  workshop.py
lume_py/endpoints/sdk/: api_client.py
script/: publish.py
tests/: test_pipeline.py  test_result.py  test_workflow.py  test_workshop.py
tests/data/: source.json  ~$consolidate-P&L.xlsx
